# fungani

./: .gitignore  LICENSE.TXT  Makefile  README.md  pyproject.toml  requirements.txt
assets/sample_results/quick_mode/: fungani_fwd.csv  fungani_rev.csv
assets/sample_results/whole_genome/: fungani_fwd.csv  fungani_rev.csv
fungani/: __init__.py  __main__.py  app.py  cli.py  core.py  plot.r
tests/: test_cli_parser.py  test_fasta_parser.py  test_logging.py
tests/data/: Pa_1_6730.fasta  random_its.fasta
