[tool.poetry]
authors = ["chl <chl@aliquote.org>"]
description = "BLAST-based program for analyzing Average Nucleotide Identity (ANI) between fungal genomes"
license = "BSD-3"
name = "fungani"
keywords = ["bioinformatics", "blast"]
package-mode = true
packages = [{include = "fungani"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry-pyinstaller-plugin.scripts]
fungani = { source = "fungani/__main__.py", type = "onefile", bundle = false }

[tool.poetry.dependencies]
python = "^3.9.0"
fqfa = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
